--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,8 @@
     <string name="save">Save</string>
     <string name="paint">Paint</string>
     <string name="brushSizeDialogTitle">Select brush size</string>
+    <string name="newPaintDialogTitle">New drawing</string>
+    <string name="newPaintDialogMsg">Start new drawing (you will lose the current drawing)?</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
 </resources>
